--- a/Survvivor/Assembly-CSharp.csproj
+++ b/Survvivor/Assembly-CSharp.csproj
@@ -57,6 +57,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\Player\PlayerMovement.cs" />
+    <Compile Include="Assets\Scripts\Player\Bullet.cs" />
+    <Compile Include="Assets\Scripts\Player\BulletPool.cs" />
+    <Compile Include="Assets\Scripts\Player\FireBullets.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\Art\topdown_shooter\towers\readme.txt" />
