--- a/Survvivor/Assembly-CSharp.csproj
+++ b/Survvivor/Assembly-CSharp.csproj
@@ -59,11 +59,12 @@
     <Compile Include="Assets\Scripts\Player\FireBullets.cs" />
     <Compile Include="Assets\Scripts\Enemy\EnemyAI.cs" />
     <Compile Include="Assets\Scripts\Player\AimLook.cs" />
+    <Compile Include="Assets\Scripts\Player\PlayerHealth.cs" />
     <Compile Include="Assets\Scripts\Bullet\Bullet.cs" />
     <Compile Include="Assets\Scripts\Bullet\BulletPool.cs" />
     <Compile Include="Assets\Scripts\BattleSystem.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerMovement.cs" />
-    <Compile Include="Assets\Scripts\Player\PlayerHealth.cs" />
+    <Compile Include="Assets\PortalSpawn.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\Art\topdown_shooter\towers\readme.txt" />
